test: Fix java 9 deprecated messages
Signed-off-by: Carlos Garcia <bcode@protonmail.com>